# GameEngine

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
assets/shaders/: debug_line.frag  debug_line.vert  mesh.frag  mesh.vert  sky.frag  sky.vert
engine/: CMakeLists.txt
engine/include/engine/core/: Engine.hpp  IApp.hpp  Log.hpp  Time.hpp
engine/include/engine/input/: Input.hpp
engine/include/engine/physics/: MathAdapters.hpp  PhysicsSystem.hpp  PhysicsTypes.hpp  PlayerController.hpp
engine/include/engine/platform/: Window.hpp
engine/include/engine/renderer/: Camera.hpp  DebugDraw.hpp  GLDebug.hpp  Mesh.hpp  MeshLibrary.hpp  RenderSystem.hpp  Shader.hpp
engine/include/engine/scene/: Scene.hpp
engine/src/core/: Engine.cpp  Log.cpp  Time.cpp
engine/src/input/: Input.cpp
engine/src/physics/: PhysicsSystem.cpp  PlayerController.cpp
engine/src/platform/: Window.cpp
engine/src/renderer/: Camera.cpp  DebugDraw.cpp  GLDebug.cpp  Mesh.cpp  MeshLibrary.cpp  RenderSystem.cpp  Shader.cpp
engine/src/scene/: Scene.cpp
scripts/: generate_glad.md  generate_glad.py  glad_extensions.txt
